<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/settingRelative"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.akwares.park_it.fragments.Settings"
    >

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/questScrollView"
        >


        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">


            <com.google.android.material.floatingactionbutton.FloatingActionButton
                android:id="@+id/fab_bot_chat"
                android:layout_width="70dp"
                android:layout_alignParentEnd="true"
                android:layout_marginTop="300dp"
                android:src="@drawable/ic_bot"
                android:tint="@color/white"
                android:backgroundTint="@color/colorPrimaryDark"
                android:layout_marginEnd="20dp"
                android:layout_height="70dp"/>

            <TextView
                android:id="@+id/defineSection"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingLeft="10dp"
                android:paddingRight="10dp"
                android:textSize="18dp"
                android:background="@color/light_gray"
                android:layout_alignParentStart="true"
                android:layout_alignParentTop="true"
                android:text="@string/secDescription" />


            <RelativeLayout
                android:layout_below="@id/defineSection"
                android:id="@+id/expL1"
                android:layout_marginTop="10dp"
                android:padding="10dp"
                android:background="@color/questionGreen"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:id="@+id/tv1"
                    android:textStyle="bold|italic"
                    android:layout_width="match_parent"
                    android:layout_height="70dp"
                    android:gravity="center_vertical"
                    android:text="@string/Q1"
                    android:textSize="20dp"
                    />

                <TextView
                    android:layout_below="@id/tv1"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center_vertical"
                    android:text="@string/Ans1"
                    android:textSize="20dp"
                    />

            </RelativeLayout>

            <RelativeLayout
                android:layout_below="@id/expL1"
                android:id="@+id/expL2"
                android:layout_marginTop="3dp"
                android:padding="10dp"
                android:background="@color/questionGreen"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:id="@+id/tv2"
                    android:textStyle="bold|italic"
                    android:layout_width="match_parent"
                    android:layout_height="70dp"
                    android:gravity="center_vertical"
                    android:text="@string/Q2"
                    android:textSize="20dp"
                    />

                <TextView
                    android:layout_below="@id/tv2"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center_vertical"
                    android:text="@string/Ans2"
                    android:textSize="20dp"
                    />

            </RelativeLayout>

            <RelativeLayout
                android:layout_below="@id/expL2"
                android:id="@+id/expL3"
                android:layout_marginTop="3dp"
                android:padding="10dp"
                android:background="@color/questionGreen"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:id="@+id/tv3"
                    android:textStyle="bold|italic"
                    android:layout_width="match_parent"
                    android:layout_height="70dp"
                    android:gravity="center_vertical"
                    android:text="@string/Q3"
                    android:textSize="20dp"
                    />

                <TextView
                    android:layout_below="@id/tv3"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center_vertical"
                    android:text="@string/Ans3"
                    android:textSize="20dp"
                    />

            </RelativeLayout>

            <RelativeLayout
                android:layout_below="@id/expL3"
                android:id="@+id/expL4"
                android:layout_marginTop="3dp"
                android:padding="10dp"
                android:background="@color/questionGreen"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:id="@+id/tv4"
                    android:textStyle="bold|italic"
                    android:layout_width="match_parent"
                    android:layout_height="70dp"
                    android:gravity="center_vertical"
                    android:text="@string/Q4"
                    android:textSize="20dp"
                    />

                <TextView
                    android:layout_below="@id/tv4"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center_vertical"
                    android:text="@string/Ans4"
                    android:textSize="20dp"
                    />

            </RelativeLayout>

            <RelativeLayout
                android:layout_below="@id/expL4"
                android:id="@+id/expL5"
                android:layout_marginTop="3dp"
                android:padding="10dp"
                android:background="@color/questionGreen"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:id="@+id/tv5"
                    android:textStyle="bold|italic"
                    android:layout_width="match_parent"
                    android:layout_height="70dp"
                    android:gravity="center_vertical"
                    android:text="@string/Q5"
                    android:textSize="20dp"
                    />

                <TextView
                    android:layout_below="@id/tv5"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center_vertical"
                    android:text="@string/Ans5"
                    android:textSize="20dp"
                    />

            </RelativeLayout>

            <RelativeLayout
                android:layout_below="@id/expL5"
                android:id="@+id/expL6"
                android:layout_marginTop="3dp"
                android:padding="10dp"
                android:background="@color/questionGreen"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:id="@+id/tv6"
                    android:textStyle="bold|italic"
                    android:layout_width="match_parent"
                    android:layout_height="70dp"
                    android:gravity="center_vertical"
                    android:text="@string/Q6"
                    android:textSize="20dp"
                    />

                <TextView
                    android:layout_below="@id/tv6"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center_vertical"
                    android:text="@string/Ans6"
                    android:textSize="20dp"
                    />

            </RelativeLayout>

        </RelativeLayout>
    </ScrollView>
</RelativeLayout>