<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_register"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimary"
    tools:context="com.akwares.park_it.activities.RegisterPage1">


    <TextView
        android:theme="@style/appTitle"
        android:text="@string/app_name"
        android:textSize="50dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:layout_marginTop="83dp"
        android:id="@+id/appName"
        android:textColor="#FFF"
        android:fontFamily="sans-serif-smallcaps"
        tools:fontFamily="cursive"
        android:textStyle="bold"
        android:focusable="false"
        android:layout_alignParentTop="true"
        android:layout_alignParentStart="true" />


    <EditText
        android:id="@+id/txtEmail"
        android:textCursorDrawable="@drawable/cursor"
        android:alpha="0.7"
        android:textColorHint="#FFFFFF"
        android:hint="@string/hint_email"
        android:paddingLeft="20dp"
        android:paddingRight="20dp"
        android:textColor="@color/white"
        android:layout_width="wrap_content"
        android:layout_height="50dp"
        android:background="@drawable/edittxt"
        android:inputType="textNoSuggestions"
        android:ems="15"
        android:layout_marginTop="114dp"
        android:layout_below="@+id/appName"
        android:layout_centerHorizontal="true" />



    <Button
        android:id="@+id/btnNext"
        android:theme="@style/materialBlueButton"
        android:text="@string/next"
        android:layout_width="250dp"
        android:layout_height="60dp"
        android:layout_marginTop="65dp"
        android:layout_below="@+id/txtEmail"
        android:layout_centerHorizontal="true"
        />


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:weightSum="2"
        android:gravity="center"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="20dp"
        >

        <TextView
            android:id="@+id/textView"
            android:text="@string/logReq"
            android:layout_width="wrap_content"
            android:gravity="center"
            android:layout_height="wrap_content" />


        <Button
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:gravity="center"
            android:id="@+id/buttonLog"
            style="@style/Widget.AppCompat.Button.Borderless.Colored"
            android:text="@string/login"
            android:textColor="@color/Red" />
    </LinearLayout>

    <CheckBox
        android:id="@+id/acceptTermsCheckBox"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:layout_below="@+id/txtEmail"
        android:layout_alignStart="@+id/btnNext" />

    <TextView
        android:id="@+id/termsTxtView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/acceptTerms"
        android:gravity="center"
        android:layout_alignBaseline="@+id/acceptTermsCheckBox"
        android:layout_alignBottom="@+id/acceptTermsCheckBox"
        android:layout_alignEnd="@+id/btnNext" />

</RelativeLayout>
