<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_login"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.akwares.park_it.activities.Login"    >
    <ImageView
        android:id="@+id/bgImage"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignParentTop="true"
        android:layout_alignParentStart="true"
        android:background="@color/colorPrimary" />

    <TextView
        android:theme="@style/appTitle"
        android:text="@string/app_name"
        android:textSize="50dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:layout_marginTop="83dp"
        android:id="@+id/appName"
        android:textColor="#FFF"
        android:fontFamily="sans-serif-smallcaps"
        tools:fontFamily="cursive"
        android:textStyle="bold"
        android:focusable="false"
        android:layout_alignParentTop="true"
        android:layout_alignParentStart="true" />

    <EditText
        android:id="@+id/txtUsername"
        android:textCursorDrawable="@drawable/cursor"
        android:alpha="0.7"
        android:textColorHint="#FFFFFF"
        android:layout_height="50dp"
        android:background="@drawable/edittxt"
        android:hint="@string/hint_username"
        android:paddingLeft="20dp"
        android:paddingRight="20dp"
        android:textColor="@color/white"
        android:layout_width="wrap_content"
        android:inputType="textNoSuggestions"
        android:ems="15"
        android:layout_above="@+id/etxtPass"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="13dp" />

    <EditText
        android:id="@+id/etxtPass"
        android:textCursorDrawable="@drawable/cursor"
        android:alpha="0.7"
        android:textColorHint="#FFFFFF"
        android:layout_height="50dp"
        android:background="@drawable/edittxt"
        android:hint="@string/hint_password"
        android:textColor="@color/white"
        android:paddingLeft="20dp"
        android:paddingRight="20dp"
        android:layout_width="wrap_content"
        android:inputType="textPassword"
        android:ems="15"
        android:layout_centerVertical="true"
        android:layout_centerHorizontal="true" />

    <Button
        android:id="@+id/btnLogin"
        android:theme="@style/materialBlueButton"
        android:text="@string/login"
        android:layout_width="250dp"
        android:layout_height="60dp"
        android:layout_marginTop="78dp"
        android:layout_below="@+id/etxtPass"
        android:layout_centerHorizontal="true" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:weightSum="2"
        android:gravity="center"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="20dp"
        >

        <TextView
            android:id="@+id/textView"
            android:text="@string/registerReq"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:gravity="center"
            android:layout_height="wrap_content" />


        <Button
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:gravity="center"
            android:id="@+id/buttonReg"
            style="@style/Widget.AppCompat.Button.Borderless.Colored"
            android:text="@string/register"
            android:textColor="@color/Red" />
    </LinearLayout>


</RelativeLayout>
