<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_register"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.akwares.park_it.activities.RegisterPage2">


    <ImageView
        android:id="@+id/bgImage"
        android:contentDescription="@string/aboutOpt"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/colorPrimary"
        android:layout_alignParentTop="true"
        android:layout_alignParentStart="true" />

    <ImageView
        android:id="@+id/idCard"
        android:layout_width="300dp"
        android:layout_height="150dp"
        android:layout_centerHorizontal="true"
        android:src="@drawable/idcard"
        android:alpha="0.8"
        />


    <EditText
        android:id="@+id/txtName"
        android:textCursorDrawable="@drawable/cursor"
        android:alpha="0.7"
        android:textColorHint="#FFFFFF"
        android:hint="@string/hint_name"
        android:paddingLeft="20dp"
        android:paddingRight="20dp"
        android:textColor="@color/white"
        android:layout_width="wrap_content"
        android:layout_height="50dp"
        android:background="@drawable/edittxt"
        android:inputType="textNoSuggestions"
        android:ems="15"
        android:layout_marginTop="60dp"
        android:layout_below="@+id/idCard"
        android:layout_centerHorizontal="true" />

    <EditText
        android:id="@+id/txtUsername"
        android:textCursorDrawable="@drawable/cursor"
        android:alpha="0.7"
        android:textColorHint="#FFFFFF"
        android:hint="@string/hint_username"
        android:paddingLeft="20dp"
        android:paddingRight="20dp"
        android:textColor="@color/white"
        android:layout_width="wrap_content"
        android:layout_height="50dp"
        android:background="@drawable/edittxt"
        android:inputType="textNoSuggestions"
        android:ems="15"
        android:layout_below="@+id/txtName"
        android:layout_alignStart="@+id/txtName"
        android:layout_marginTop="15dp" />



    <EditText
        android:id="@+id/txtPass"
        android:textCursorDrawable="@drawable/cursor"
        android:alpha="0.7"
        android:textColorHint="#FFFFFF"
        android:hint="@string/hint_password"
        android:paddingLeft="20dp"
        android:paddingRight="20dp"
        android:textColor="@color/white"
        android:layout_width="wrap_content"
        android:layout_height="50dp"
        android:background="@drawable/edittxt"
        android:inputType="textPassword"
        android:ems="15"
        android:layout_below="@+id/txtUsername"
        android:layout_alignStart="@+id/txtUsername"
        android:layout_marginTop="12dp" />

    <Button
        android:id="@+id/btnRegister"
        android:theme="@style/materialBlueButton"
        android:text="@string/register"
        android:layout_width="250dp"
        android:layout_height="60dp"
        android:layout_marginTop="60dp"
        android:layout_below="@+id/txtPass"
        android:layout_centerHorizontal="true" />

</RelativeLayout>
